--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Ben Kelly <ben@wanderview.com>",
   "license": "BSD",
   "dependencies": {
-    "ether-frame": "~0.2.0"
+    "ether-frame": "~0.2.0",
+    "readable-stream": "~0.3.0"
   },
   "devDependencies": {
     "nodeunit": "~0.7.4"
