--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "BSD",
   "dependencies": {
     "ether-frame": "~0.2.0",
-    "readable-stream": "~0.3.0"
+    "object-transform": "~0.1.0"
   },
   "devDependencies": {
     "nodeunit": "~0.7.4"
